<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Converters</string>
    <string name="main_instruction">Select a conversion.</string>
    <string name="action_settings">Settings</string>
    <string name="convert_temp">Celsius --> Fahrenheit</string>
    <string name="convert_height">Feet, inch --> cm/m</string>

    <!--Height Converter Activity Strings-->
    <string name="title_height">Height Converter</string>
    <string name="instructions">Enter a height in feet and inches to convert it to metric.</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="metres">Check for height in metres</string>
    <string name="convert">Convert</string>

    <!--Temp Converter Activity Strings-->
    <string name="title_temp">Temperature Converter</string>
    <string name="instructions_temp">Enter the temperature in Fahrenheit to convert to Celsius.</string>
    <string name="fahrenheit">Fahrenheit</string>

</resources>
