<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instruction_text"
        android:text="@string/main_instruction"
        android:textSize="@dimen/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/temp_convert_button"
        android:text="@string/convert_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction_text" />

    <Button
        android:id="@+id/height_convert_button"
        android:text="@string/convert_height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_convert_button" />

</RelativeLayout>
